Update spotless apply

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,16 @@
 						</importOrder>
 					</java>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>
+								check
+							</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
