--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,3 +25,13 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: phantuanviet0706/pancharm:latest
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_Key }}
+          script: |
+            cd ~/pancharm
+            ./redeploy.sh
