Update filter for getAll function (Permissions & Roles)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     import: "optional:configserver:http://localhost:8888"
 
   datasource:
-    url: ${DBMS_CONNECTION:jdbc:mysql://localhost:3306/pancharm?useSSL=false&serverTimezone=UTC}
+    url: ${DBMS_CONNECTION:jdbc:mysql://localhost:3306/pancharm?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
     username: ${DBMS_USERNAME:root}
     password: ${DBMS_PASSWORD:123456}
     driver-class-name: com.mysql.cj.jdbc.Driver
