Stop deploying to EC2

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,12 +26,12 @@ jobs:
           push: true
           tags: phantuanviet0706/pancharm:latest
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_Key }}
-          script: |
-            cd ~/pancharm
-            ./redeploy.sh
+#      - name: Deploy to EC2
+#        uses: appleboy/ssh-action@v1.0.0
+#        with:
+#          host: ${{ secrets.EC2_HOST }}
+#          username: ubuntu
+#          key: ${{ secrets.EC2_SSH_Key }}
+#          script: |
+#            cd ~/pancharm
+#            ./redeploy.sh
