--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -71,3 +71,10 @@ appInfo:
   aws:
     s3:
       bucket-name: pancharm
+
+  minio:
+    endpoint: http://localhost:9000
+    access-key: admin
+    secret-key: 12345678
+    bucket-name: pancharm
+    public-base-url: http://localhost:9000
