--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,27 +2,47 @@ server:
   port: 8080
   servlet:
     context-path: /pancharm
+    session:
+      timeout: 30m
   tomcat:
     max-http-form-post-size: -1
     max-swallow-size: -1
+    accept-count: 100
+    connection-timeout: 5000
 
 spring:
   application:
     name: pancharm
-  config:
-    import: "optional:configserver:http://localhost:8888"
+#  config:
+#    import: "optional:configserver:http://localhost:8888"
+  cloud:
+    config:
+      enabled: false
+      import-check.enabled: false
+
 
   datasource:
     url: ${DBMS_CONNECTION:jdbc:mysql://localhost:3306/pancharm?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
     username: ${DBMS_USERNAME:root}
     password: ${DBMS_PASSWORD:123456}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      connection-timeout: 3000
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+    properties:
+      hibernate:
+        jdbc:
+          fetch_size: 50
+          batch_size: 50
 
   autoconfigure:
     exclude:
@@ -81,3 +101,8 @@ appInfo:
     secret-key: 12345678
     bucket-name: pancharm
     public-base-url: http://localhost:9000
+
+logging:
+  level.org:
+    apache.catalina.core: DEBUG
+    springframework.web.multipart: DEBUG
