--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
+      - name: Maven clean & build
+        run: mvn -B clean package -DskipTests
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
