--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -97,9 +97,9 @@ appInfo:
 
   minio:
     endpoint: http://localhost:9000
-    access-key: admin
-    secret-key: 12345678
-    bucket-name: pancharm
+    access-key: ${MINIO_ACCESS_KEY:admin}
+    secret-key: ${MINIO_SECRET_KEY:12345678}
+    bucket-name: ${MINIO_BUCKET_NAME:pancharm}
     public-base-url: http://localhost:9000
 
   front-end:
