--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -46,7 +46,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: phantuanviet0706/pancharm:latest
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
 
   deploy-staging:
     needs: build
