--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -78,4 +78,6 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           script: |
             cd ~/pancharm
-            ./redeploy-prod.sh prod-latest
+            chmod +x redeploy-prod.sh
+            bash -x redeploy-prod.sh prod-latest
+  
