Update default data

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
 			<artifactId>minio</artifactId>
 			<version>8.6.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
