--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ server:
     max-swallow-size: -1
     accept-count: 100
     connection-timeout: 5000
+    max-part-count: 50
 
 spring:
   application:
